Add a distinct endpoint for getting tape-id-to-broadcast-id map
